# sta2eth

./: .gitignore  BLOCKING_ANALYSIS.md  BRIDGE_API_VERIFICATION.md  C6_OTA_UPGRADE_REQUIREMENTS.md  CMakeLists.txt  CODE_LEVEL_ANALYSIS.md  CONFIGURATION_GUIDE.md  ESP32_P4_CONFIG_OPTIMIZATION_GUIDE.md  ESP32_P4_KCONFIG_REFERENCE.md  FEASIBILITY_DEEP_ANALYSIS.md  FINAL_IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  KCONFIG_VALIDATION_FINAL.md  KCONFIG_VERIFICATION.md  MINIMAL_TEST_README.md  MULTI_TIER_BUFFER_ARCHITECTURE.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_FINAL.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PROJECT_SUMMARY.md  PSRAM_CONFIG_RATIONALE.md  PSRAM配置说明.md  README.md  SDIO_KCONFIG_OPTIMIZATIONS.md  WIFI_REMOTE_BUFFER_OPTIMIZATION.md  kconfig-reference[1].html  partitions_p4.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
docs/: BRIDGE_IMPLEMENTATION.md  BRIDGE_MAC_DHCP_ANALYSIS.md  BRIDGE_SAME_MAC_ANALYSIS.md  C6_OTA_ANALYSIS.md  C6_SLAVE_SETUP.md  COMMUNICATION_ANALYSIS.md  DYNAMIC_MAC_LEARNING_PLAN.md  ETH_DISCONNECT_HANDLING_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md
log/: 1.txt  2.txt  3.txt  4.txt  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  c6_ota.c  c6_ota.h  c6_ota_manager.c  c6_ota_manager.h  c6_version_check.c  c6_version_check.h  ethernet_iface.c  idf_component.yml  ota_mode.c  ota_mode.h  ota_webserver.c  ota_webserver.h  sta2eth_bridge.c  sta2eth_bridge.c.backup  sta2eth_main.c  sta2eth_minimal.c  wifi_config_portal.c  wifi_config_portal.h  wifi_remote_sta.c  wifi_remote_sta.h  wired_iface.h
(+3 files in other folders)
